--- a/src/component/Navbar/main.css
+++ b/src/component/Navbar/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
 }
 .navbar {
   margin-bottom: 0px;
@@ -14,6 +15,7 @@ body {
   background-color: white;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 3px solid transparent;
 }
 .navbar > img {
   padding-right: 2%;
@@ -69,6 +71,14 @@ body {
 
 h5.text-right {
   padding-right: 5%;
+}
+
+.navbar-nav a:hover {
+  border-bottom: 3px solid black;
+}
+
+.navbar-nav a.active {
+  border-bottom: 3px solid black;
 }
 
 /* 
